Correct element spacing

--- a/mtp_cashbook/assets-src/stylesheets/components/_buttons.scss
+++ b/mtp_cashbook/assets-src/stylesheets/components/_buttons.scss
@@ -1,8 +1,18 @@
+// Fixes
+
 button,
 .button {
   font-family: inherit;
 }
 
 .button-secondary {
-  background-color: #dee0e2;
+  background-color: $grey-3;
+}
+
+// App specific
+
+button,
+.button {
+  padding-top: .3em;
+  padding-bottom: .3em;
 }
